<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_numero1"
            android:layout_width="39dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numero1"
            tools:text="Numero1" />

        <EditText
            android:id="@+id/edt_numero1"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_numero2"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numero2" />

        <EditText
            android:id="@+id/edt_numero2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_suma"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#67B289"
            android:gravity="center"
            android:onClick="sumarOnclick"
            android:text="@string/suma"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_resta"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="#67B289"
            android:gravity="center"
            android:onClick="restaOnclick"
            android:text="@string/resta"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_multiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#67B289"
            android:gravity="center"
            android:onClick="multiplicacionOnclick"
            android:text="@string/multiplicacion"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="#67B289"
            android:gravity="center"
            android:onClick="divisionOnclick"
            android:text="@string/division"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:orientation="horizontal"
        android:paddingLeft="70dp"
        android:paddingEnd="70dp">

        <Button
            android:id="@+id/btn_modulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#67B289"
            android:gravity="center"
            android:onClick="moduloOnclick"
            android:text="@string/modulo"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="294dp"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resultado"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0_0"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>